# OpenMetadata

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py  workflow.dremio.template.yaml  workflow.dremio.yaml
local-openmetadata-stack/: docker-compose.yml
src/custom_dremio_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/metadata/ingestion/source/database/dremio/: metadata.py  service_spec.py
